@@ -32,7 +32,13 @@ DEFINE_LANG_NAME ("Modula-2")
   { "-Wpim",
       N_("use PIM [234] dialect of Modula-2") },
   { "-Wpim2",
-      N_("only use PIM 2 dialect of Modula-2") },
+      N_("use PIM 2 dialect of Modula-2") },
+  { "-Wpim3",
+      N_("use PIM 3 dialect of Modula-2") },
+  { "-Wpim4",
+      N_("use PIM 4 dialect of Modula-2") },
+  { "-Wpositive-mod-floor-div",
+      N_("force positive result from MOD and DIV result floor") },
   { "-Wlibs=ulm",
       N_("use the University of Ulm libraries and PIM dialect of Modula-2") },
   { "-Wlibs=logitech",
